hphp/test/zend/good/ext-zlib/zlib_scheme_file_get_contents_basic.php
<?php
$inputFileName = dirname(__FILE__)."/004.txt.gz";
$srcFile = "compress.zlib://$inputFileName";
$contents = file_get_contents($srcFile);
echo $contents;
?>
===DONE===