hphp/test/zend/bad/ext/phar/tests/zip/bug48791.php
<?php
echo file_get_contents('phar://' . dirname(__FILE__) . '/files/test.odt/content.xml'), "\n";
?>
===DONE===